--- a/extension/templates/popup.html
+++ b/extension/templates/popup.html
@@ -18,8 +18,9 @@
 
   <body>
     <div class="container">
+      <button id="draftButton">Draft Email</button>
+      <button id="summarizeButton">Summarize Email</button>
       <button id="generateButton">Generate Email Response</button>
-      <!-- <button id="summarizeButton">Summarize Email</button> -->
       <div id="responseArea"></div>
       <!-- This is where the response will be displayed -->
     </div>
